src/test/ui/issues/issue-3096-2.rs
enum Bottom { }

fn main() {
    let x = &() as *const () as *const Bottom;
    match x { } //~ ERROR non-exhaustive patterns
}
